crates/config/tests/snapshots/block_string_in_prefix.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-in-prefix

## Input

```mical
section {
  desc |
    block line
  other value
}

```

## JSON

```json
{
  "sectiondesc": "block line\n",
  "sectionother": "value"
}
```

vim:ft=markdown
