crates/config/tests/snapshots/block_string_indicator_fallback.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-indicator-fallback

## Input

```mical
a |+text
b >-stuff
c | not blank

```

## JSON

```json
{
  "a": "|+text",
  "b": ">-stuff",
  "c": "| not blank"
}
```

vim:ft=markdown
