crates/config/tests/snapshots/block_string_keep.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-keep

## Input

```mical
key |+
  hello

a b

```

## JSON

```json
{
  "a": "b",
  "key": "hello\n\n"
}
```

vim:ft=markdown
