crates/config/tests/snapshots/block_string_keep_multi_trailing.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-keep-multi-trailing

## Input

```mical
key |+
  x


a b

```

## JSON

```json
{
  "key": "x\n\n\n",
  "a": "b"
}
```

vim:ft=markdown
