crates/config/tests/snapshots/block_string_leading_empty_line.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-leading-empty-line

## Input

```mical
key |

  hello
  world

```

## JSON

```json
{
  "key": "\nhello\nworld\n"
}
```

vim:ft=markdown
