crates/config/tests/snapshots/block_string_literal.snap
---
source: crates/config/tests/snapshots.rs
---
# block_string_literal

## Input

```mical
key |
  line 1
  line 2

```

## Json

```json
{
  "key": "line 1\nline 2\n"
}
```

vim:ft=markdown
