crates/config/tests/snapshots/block_string_multi_folded_clip_emptyln_none_wsln_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-folded-clip-emptyln-none-wsln-eof-nonl

## Input

```mical
key >

  hello
  world
 
```

## JSON

```json
{
  "key": "\nhello world\n"
}
```

vim:ft=markdown
