crates/config/tests/snapshots/block_string_multi_folded_clip_wsln_emptyln_emptyln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-folded-clip-wsln-emptyln-emptyln-eof

## Input

```mical
key >
 
  hello

  world


```

## JSON

```json
{
  "key": "\nhello\nworld\n"
}
```

vim:ft=markdown
