crates/config/tests/snapshots/block_string_multi_folded_keep_emptyln_emptyln_none_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-folded-keep-emptyln-emptyln-none-dedent

## Input

```mical
key >+
  hello

  world
other val

```

## JSON

```json
{
  "key": "hello\nworld\n",
  "other": "val"
}
```

vim:ft=markdown
